--- a/public/resources/portfolio/index.html
+++ b/public/resources/portfolio/index.html
@@ -15,16 +15,16 @@
  
 	 
 
-    <title>Odtü İlan Portfolio Sayfası</title>
+    <title>Campus İlan Portfolio Sayfası</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/resources/portfolio/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
+    <link href="/resources/portfolio/css/stylish-portfolio.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/resources/portfolio/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <!--   <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">   -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -48,7 +48,7 @@
             </li>
             
             <li>
-                <a href="#about" onclick = $("#menu-close").click(); >Odtü İlan Nedir?</a>
+                <a href="#about" onclick = $("#menu-close").click(); >Campus İlan Nedir?</a>
             </li>
             <li>
                 <a href="#services" onclick = $("#menu-close").click(); >Hizmetlerimiz</a>
@@ -65,7 +65,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center" style="color:white;">
-            <h1>Odtü İlan</h1>
+            <h1>Campus İlan</h1>
             <h3>Bir üniversitelinin ihtiyacı olan herşey burada...</h3>
             <h3>İkinci el ürünler,ev arkadaşı,ders notları,özel ders ilanları ve daha fazlası...</h3>
             <br>
@@ -78,8 +78,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Odtü İlan Odtü'ye özel ikinci el ilan sitesidir!</h2>
-                    <p class="lead">Odtü İlan ile ikinci el eşyalarınızı satabilir,ev arkadaşı arayabilir&amp;bulabilir,ders notu satabilir ve özel ders verebilirsiniz.Hepsi tamamen ücretsiz ve kullanıcı dostu bir arayüzle!!</p>
+                    <h2>Campus İlan üniversitelilere özel ilan sitesidir!</h2>
+                    <p class="lead">Campus İlan ile ikinci el eşyalarınızı satabilir,ev arkadaşı arayabilir&amp;bulabilir,ders notu satabilir ve özel ders verebilirsiniz.Hepsi tamamen ücretsiz ve kullanıcı dostu bir arayüzle!!</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -144,7 +144,7 @@
                                 <h4>
                                     <strong>Özel Ders İlanları</strong>
                                 </h4>
-                                <p>Doğrudan Odtü'lü öğrencilerden özel ders alın</p>
+                                <p>Doğrudan Campus'lü öğrencilerden özel ders alın</p>
                                 <a href="#" class="btn btn-light">Daha Fazlası</a>
                             </div>
                         </div>
@@ -161,7 +161,7 @@
     <!-- Callout -->
     <aside class="callout">
         <div class="text-vertical-center" style="padding:100px;">
-            <h1>"Odtü İlan" herkes için yepyeni bir başlangıç olacak ;) </h1>
+            <h1>"Campus İlan" herkes için yepyeni bir başlangıç olacak ;) </h1>
         </div>
     </aside>
     
@@ -189,28 +189,28 @@
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                    <img class="img-portfolio img-responsive" src="/resources/portfolio/img/portfolio-1.jpg">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                                    <img class="img-portfolio img-responsive" src="/resources/portfolio/img/portfolio-2.jpg">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
+                                    <img class="img-portfolio img-responsive" src="/resources/portfolio/img/portfolio-3.jpg">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
+                                    <img class="img-portfolio img-responsive" src="/resources/portfolio/img/portfolio-4.jpg">
                                 </a>
                             </div>
                         </div>
@@ -286,13 +286,13 @@
         <div id="contact" class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Odtü İlan</strong>
+                    <h4><strong>Campus İlan</strong>
                     </h4>
-                    <p>Odtü'lülere özel ikinci el ilan sitesi.</p><br>
-                    <p>Developers: <a href="mailto:onurdemirtas91@gmail.com">Onur</a>  &amp;  <a href="mailto:">Oğuz</a></p>
+                    <p>Campus'lülere özel ikinci el ilan sitesi.</p><br>
+                    <p>Developers: <a href="mailto:onurdemirtas91@gmail.com">Onur</a>  &amp;  <a href="mailto:oguz.tanrikulu@metu.edu.tr">Oğuz</a></p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (505) 782-2777</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:iletisim@odtuilan.com">iletisim@odtuilan.com</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:iletisim@campusilan.com">iletisim@campusilan.com</a>
                         </li>
                     </ul>
                     <br>
@@ -308,17 +308,17 @@
                         </li>
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">&copy; Odtü İlan 2015</p>
+                    <p class="text-muted">&copy; Campus İlan 2015</p>
                 </div>
             </div>
         </div>
     </footer>
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="/resources/portfolio/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/resources/portfolio/js/bootstrap.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script>
